docs: rebrand README as Enterprise AI Memory Backbone
- New tagline: 'The Zero-Overhead, Agent-Ready AI Memory Backbone'
- Added 4-pillar 'Why Spector?' section (Agent-Native MCP,
  SpectorQuant VASQ, Off-Heap Panama, Embedded/Standalone)
- Added MCP Integration section with tool table and Claude config
- Added spector-mcp to architecture tree and dependency graph
- Updated test suite table (331+ tests including spector-mcp)
- Expanded roadmap with MCP, LoRA routing, ColBERT reranking
- Added JDK API status note in Prerequisites section
- Removed competitor name-drops from positioning language
- Reordered: Why Spector → MCP → Architecture → Quick Start →
  API → Performance → Comparison